ggplot2 0.8.3  (2008-XX-XX)
----------------------------------------

* facet_wrap: contents guaranteed to be clipped to panel
* resolution: fixed bug in computation of resolution that lead to (e.g.) incorrect boxplot widths when there was only a single x value in a group.
* geom_vline, geom_hline, geom_abline: should work in yet more situations
* stat_summary: should be a little faster
* stat_summary: now warns when dropping records with missing values
* scale_manual: breaks and limits 
* scale_discrete: factor levels no longer mistakenly reordered
* American spelling of color accepted in more places
* scale_discrete: empty factor levels will be preserved, unless drop = TRUE
* xlim and ylim now work recognise Date and POSIXct classes to create date and date_time scales respectively