@@ -6,6 +6,14 @@ GeomText <- proto(Geom, {
     )
   }
 
+  draw_legend <- function(., data, ...) {
+    data <- aesdefaults(data, .$default_aes(), list(...))
+    with(data,
+      textGrob("a", 0.5, 0.5, rot = angle, 
+      gp=gpar(col=colour, fontsize = size * .pt))
+    )
+  }
+
   objname <- "text"
   icon <- function(.) textGrob("text", rot=45, gp=gpar(cex=1.2))
   desc <- "Textual annotations"
@@ -13,7 +21,7 @@ GeomText <- proto(Geom, {
   default_stat <- function(.) StatIdentity
   required_aes <- c("x", "y", "label")
   default_aes <- function(.) aes(colour="black", size=5 , angle=0, hjust=0.5, vjust=0.5)
-  guide_geom <- function(x) "line"
+  guide_geom <- function(x) "text"
   
   examples <- function(.) {
     p <- ggplot(mtcars, aes(x=wt, y=mpg, label=rownames(mtcars)))
@@ -34,8 +42,10 @@ GeomText <- proto(Geom, {
     p + geom_text(aes(size=wt)) + scale_size(to=c(3,6))
     
     # Use qplot instead
-    qplot(wt, mpg, data=mtcars, label=rownames(mtcars), geom=c("point","text"))
-    qplot(wt, mpg, data=mtcars, label=rownames(mtcars), geom=c("point","text"), size=wt)
+    qplot(wt, mpg, data = mtcars, label = rownames(mtcars),
+       geom=c("point", "text"))
+    qplot(wt, mpg, data = mtcars, label = rownames(mtcars), size = wt) +
+      geom_text(colour = "red")
   }
   
 })
