@@ -11,3 +11,4 @@ ggplot2 0.8.3  (2008-XX-XX)
 * American spelling of color accepted in more places
 * scale_discrete: empty factor levels will be preserved, unless drop = TRUE
 * xlim and ylim now work recognise Date and POSIXct classes to create date and date_time scales respectively
+* geom_text: better legend
